--- a/notebooks/Functional_Introduction_To_Python_Section_4(Intermediate_Topics).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_4(Intermediate_Topics).ipynb
@@ -369,8 +369,16 @@
     "The key differences between Classes and Functions are:\n",
     "\n",
     "* Functions are much easier to reason about\n",
-    "* Functions "
+    "* Functions (typically) have state inside the function only, where classes have state persists outside of the function\n",
+    "* Classes can offer a more advanced level of abstraction at the cost of complexity"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
