--- a/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -200,11 +200,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     " ### Strings and String Formatting\n",
-    "Strings are a sequence of characters and they are often programatically formated.  Almost all Python programs have strings because they can be used to send messages to users who use the program.  When creating strings there are few core concepts to understand:\n",
+    "Strings are a sequence of characters and they are often programmatically formatted.  Almost all Python programs have strings because they can be used to send messages to users who use the program.  When creating strings there are few core concepts to understand:\n",
     "\n",
     "* Strings can be create with the single, double and triple/double quotes\n",
     "* Strings are can be formatted\n",
@@ -400,7 +401,7 @@
    "metadata": {},
    "source": [
     "#### Strings Can Be Formatted in More Complex Ways\n",
-    "One of the best ways to format a string in modering Python 3 is to use f-strings"
+    "One of the best ways to format a string in modern Python 3 is to use f-strings"
    ]
   },
   {
@@ -690,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A common dictionary pattern is iterate on a dictionary by using the items method.  In the example below the key and the value are printed:"
+    "A common dictionary pattern is to iterate on a dictionary by using the items method.  In the example below the key and the value are printed:"
    ]
   },
   {
@@ -838,31 +839,6 @@
     "print(f'Last position: {list_of_bjj_positions[-1:]}')\n",
     "print(f'First three positions: {list_of_bjj_positions[0:3]}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['mount']"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -881,7 +857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
