--- a/notebooks/Functional_Introduction_To_Python_Section_2(Functions).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_2(Functions).ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "### Writing Functions\n",
-    "Learning to write a function is the most fundamental skill to learn in Python.  With a basic mastery of functions it is possible to have an almost full command of the language.\n"
+    "Learning to write a function is the most fundamental skill to learn in Python.  With a basic mastery of functions, it is possible to have an almost full command of the language.\n"
    ]
   },
   {
@@ -454,7 +454,7 @@
    "metadata": {},
    "source": [
     "##### Closures and Functional Currying\n",
-    "Closurers are functions that contain other functions.\n",
+    "Closures are functions that contain other nested functions.\n",
     "In Python, a common way to use them is to keep track of the state.\n",
     "In the example below, the outer function, attack_counter keeps track of counts of attacks.\n",
     "The inner fuction attack_filter uses the \"nonlocal\" keyword in Python3, to modify the variable in the outer function.\n",
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "['arm_triangle']"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,23 +624,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['keylock']\n",
-      "['knee_bar']\n",
-      "['knee_bar']\n",
-      "['knee_bar']\n",
       "['kimura']\n",
-      "['arm_triangle']\n",
+      "['straight_ankle_lock']\n",
+      "['straight_ankle_lock']\n",
       "['kimura']\n",
       "['keylock']\n",
-      "['knee_bar']\n",
-      "['arm_triangle']\n"
+      "['straight_ankle_lock']\n",
+      "['keylock']\n",
+      "['straight_ankle_lock']\n",
+      "['kimura']\n",
+      "['straight_ankle_lock']\n"
      ]
     }
    ],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -708,25 +708,25 @@
      "output_type": "stream",
      "text": [
       "Attacking after 3 seconds\n",
-      "['straight_ankle_lock']\n",
-      "Attacking after 1 seconds\n",
-      "['kimura']\n",
-      "Attacking after 0 seconds\n",
-      "['kimura']\n",
-      "Attacking after 3 seconds\n",
-      "['kimura']\n",
-      "Attacking after 0 seconds\n",
-      "['straight_ankle_lock']\n",
-      "Attacking after 1 seconds\n",
-      "['straight_ankle_lock']\n",
-      "Attacking after 3 seconds\n",
-      "['arm_triangle']\n",
-      "Attacking after 3 seconds\n",
-      "['kimura']\n",
-      "Attacking after 2 seconds\n",
       "['keylock']\n",
+      "Attacking after 2 seconds\n",
+      "['kimura']\n",
+      "Attacking after 3 seconds\n",
+      "['straight_ankle_lock']\n",
       "Attacking after 0 seconds\n",
-      "['straight_ankle_lock']\n"
+      "['straight_ankle_lock']\n",
+      "Attacking after 1 seconds\n",
+      "['knee_bar']\n",
+      "Attacking after 2 seconds\n",
+      "['knee_bar']\n",
+      "Attacking after 1 seconds\n",
+      "['keylock']\n",
+      "Attacking after 1 seconds\n",
+      "['arm_triangle']\n",
+      "Attacking after 2 seconds\n",
+      "['straight_ankle_lock']\n",
+      "Attacking after 2 seconds\n",
+      "['kimura']\n"
      ]
     }
    ],
@@ -736,11 +736,347 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### Applying a Function to a Pandas DataFrame\n",
+    "The final lesson on functions is to take this knowledge and use it on a DataFrame in Pandas. One of the more fundamental concepts in Pandas is use apply on a column vs iterating through all of the values.  An example is shown below where all of the numbers are rounded to a whole digit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal_length</th>\n",
+       "      <th>sepal_width</th>\n",
+       "      <th>petal_length</th>\n",
+       "      <th>petal_width</th>\n",
+       "      <th>species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal_length  sepal_width  petal_length  petal_width species\n",
+       "0           5.1          3.5           1.4          0.2  setosa\n",
+       "1           4.9          3.0           1.4          0.2  setosa\n",
+       "2           4.7          3.2           1.3          0.2  setosa\n",
+       "3           4.6          3.1           1.5          0.2  setosa\n",
+       "4           5.0          3.6           1.4          0.2  setosa"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "iris = pd.read_csv('https://raw.githubusercontent.com/mwaskom/seaborn-data/master/iris.csv')\n",
+    "iris.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal_length</th>\n",
+       "      <th>sepal_width</th>\n",
+       "      <th>petal_length</th>\n",
+       "      <th>petal_width</th>\n",
+       "      <th>species</th>\n",
+       "      <th>rounded_sepal_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal_length  sepal_width  petal_length  petal_width species  \\\n",
+       "0           5.1          3.5           1.4          0.2  setosa   \n",
+       "1           4.9          3.0           1.4          0.2  setosa   \n",
+       "2           4.7          3.2           1.3          0.2  setosa   \n",
+       "3           4.6          3.1           1.5          0.2  setosa   \n",
+       "4           5.0          3.6           1.4          0.2  setosa   \n",
+       "\n",
+       "   rounded_sepal_length  \n",
+       "0                   5.0  \n",
+       "1                   5.0  \n",
+       "2                   5.0  \n",
+       "3                   5.0  \n",
+       "4                   5.0  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris['rounded_sepal_length'] = iris[['sepal_length']].apply(pd.Series.round)\n",
+    "iris.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This was done with a built in function, but a custom function can also be written and applied to a column.  In the example below, the values are multiplied by 100.  The alternative way to accomplish this would be to create a loop, transform the data and then write it back.  In Pandas, it is straightforward and simple to apply custom functions instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal_length</th>\n",
+       "      <th>sepal_width</th>\n",
+       "      <th>petal_length</th>\n",
+       "      <th>petal_width</th>\n",
+       "      <th>species</th>\n",
+       "      <th>rounded_sepal_length</th>\n",
+       "      <th>100x_sepal_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>490.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>470.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>460.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>500.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal_length  sepal_width  petal_length  petal_width species  \\\n",
+       "0           5.1          3.5           1.4          0.2  setosa   \n",
+       "1           4.9          3.0           1.4          0.2  setosa   \n",
+       "2           4.7          3.2           1.3          0.2  setosa   \n",
+       "3           4.6          3.1           1.5          0.2  setosa   \n",
+       "4           5.0          3.6           1.4          0.2  setosa   \n",
+       "\n",
+       "   rounded_sepal_length  100x_sepal_length  \n",
+       "0                   5.0              510.0  \n",
+       "1                   5.0              490.0  \n",
+       "2                   5.0              470.0  \n",
+       "3                   5.0              460.0  \n",
+       "4                   5.0              500.0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiply_by_100(x):\n",
+    "    \"\"\"Multiplies by 100\"\"\"\n",
+    "    return x*100\n",
+    "iris['100x_sepal_length'] = iris[['sepal_length']].apply(multiply_by_100)\n",
+    "iris.head()"
+   ]
   }
  ],
  "metadata": {
@@ -759,7 +1095,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
