--- a/notebooks/class1_scratchpad.ipynb
+++ b/notebooks/class1_scratchpad.ipynb
@@ -2152,6 +2152,563 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = range(3)\n",
+    "print(list(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sambo has influenced modern mixed martial arts\n",
+      "Muay Thai has influenced modern mixed martial arts\n",
+      "BJJ has influenced modern mixed martial arts\n"
+     ]
+    }
+   ],
+   "source": [
+    "martial_arts = [\"Sambo\", \"Muay Thai\", \"BJJ\"]\n",
+    "for martial_art in martial_arts:\n",
+    "    print(f\"{martial_art} has influenced modern mixed martial arts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = len(martial_arts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-a26766450127>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-a26766450127>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    for item in [martial_arts:count-1]:\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in [martial_arts:count-1]:\n",
+    "        print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are a total of 3 attacks coming!\n",
+      "crossing legs to prevent attack #1\n",
+      "crossing legs to prevent attack #2\n",
+      "This is not a lower body attack, I will cross my arms for #3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def attacks():\n",
+    "    list_of_attacks = [\"lower_body\", \"lower_body\",\"upper_body\"]\n",
+    "    print(f\"There are a total of {len(list_of_attacks)} attacks coming!\")\n",
+    "    for attack in list_of_attacks:\n",
+    "        yield attack\n",
+    "attack = attacks()\n",
+    "count = 0\n",
+    "while next(attack) == \"lower_body\":\n",
+    "    count +=1\n",
+    "    print(f\"crossing legs to prevent attack #{count}\")\n",
+    "else:\n",
+    "    count +=1\n",
+    "    print(f\"This is not a lower body attack, I will cross my arms for #{count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommended_attack(position):\n",
+    "    \"\"\"Recommends an attack based on the position\"\"\"\n",
+    "    if position == \"full_guard\":\n",
+    "        print(f\"Try an armbar attack\")\n",
+    "    elif position == \"half_guard\":\n",
+    "        print(f\"Try a kimura attack\")\n",
+    "    elif position == \"full_mount\":\n",
+    "        print(f\"Try an arm triangle\")\n",
+    "    else:\n",
+    "        print(f\"You're on your own, there is no suggestion for an attack\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Try an armbar attack\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommended_attack(\"full_guard\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lazy_return_random_attacks():\n",
+    "    \"\"\"Yield attacks each time\"\"\"\n",
+    "    import random\n",
+    "    attacks = {\"kimura\": \"upper_body\",\n",
+    "           \"straight_ankle_lock\":\"lower_body\", \n",
+    "           \"arm_triangle\":\"upper_body\",\n",
+    "            \"keylock\": \"upper_body\",\n",
+    "            \"knee_bar\": \"lower_body\"}\n",
+    "    while True:\n",
+    "        random_attack = random.choices(list(attacks.keys()))\n",
+    "        yield random_attack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upper_case_attacks = (attack.pop().upper() for attack in lazy_return_random_attacks())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'KNEE_BAR'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(upper_case_attacks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'KEYLOCK'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(upper_case_attacks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Generator Pipeline:  One expression chains into the next\n",
+    "#Make all attacks appear as Upper Case\n",
+    "upper_case_attacks = (attack.pop().upper() for attack in lazy_return_random_attacks())\n",
+    "#Remove the underscore\n",
+    "remove_underscore = (attack.split(\"_\") for attack in upper_case_attacks)\n",
+    "#Create a new phrase \n",
+    "new_attack_phrase = (\" \".join(phrase) for phrase in remove_underscore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'KNEE BAR'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(new_attack_phrase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'KNEE BAR'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(new_attack_phrase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KEYLOCK\n",
+      "ARM TRIANGLE\n",
+      "ARM TRIANGLE\n",
+      "KIMURA\n",
+      "ARM TRIANGLE\n",
+      "ARM TRIANGLE\n",
+      "KEYLOCK\n",
+      "KIMURA\n",
+      "ARM TRIANGLE\n",
+      "KIMURA\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(10):\n",
+    "    print(next(new_attack_phrase))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "martial_arts = [\"Sambo\", \"Muay Thai\", \"BJJ\"]\n",
+    "new_phrases = [\"\".join(f\"Mixed Martial Arts is influenced by {martial_art}\") for martial_art in martial_arts]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mixed Martial Arts is influenced by Sambo', 'Mixed Martial Arts is influenced by Muay Thai', 'Mixed Martial Arts is influenced by BJJ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_phrases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I would like to compete in the EBI tournament.\n",
+      "I would like to compete in the IBJJF tournament.\n",
+      "I would like to compete in the NAGA tournament.\n",
+      "There are no more tournaments\n"
+     ]
+    }
+   ],
+   "source": [
+    "tournaments = [\"NAGA\", \"IBJJF\", \"EBI\"]\n",
+    "while True:\n",
+    "    try:\n",
+    "        tournament = tournaments.pop()\n",
+    "        print(f\"I would like to compete in the {tournament} tournament.\")\n",
+    "    except IndexError:\n",
+    "        print(\"There are no more tournaments\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tournaments = [\"NAGA\", \"IBJJF\", \"EBI\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NAGA'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tournaments.pop(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['NAGA', 'IBJJF']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tournaments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'IBJJF'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tournaments.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['NAGA']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tournaments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NAGA'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tournaments.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "pop from empty list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-c05b4c014cc0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtournaments\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: pop from empty list"
+     ]
+    }
+   ],
+   "source": [
+    "tournaments.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I would like to compete in the EBI tournament.\n",
+      "I would like to compete in the IBJJF tournament.\n",
+      "I would like to compete in the NAGA tournament.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Do Not Do This\n",
+    "tournaments = [\"NAGA\", \"IBJJF\", \"EBI\"]\n",
+    "while True:\n",
+    "    try:\n",
+    "        tournament = tournaments.pop()\n",
+    "        print(f\"I would like to compete in the {tournament} tournament.\")\n",
+    "    except:\n",
+    "        #print(\"There are no more tournaments\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:A shot across the bows\n",
+      "WARNING:root:I would like to compete in the EBI tournament.\n",
+      "WARNING:root:I would like to compete in the IBJJF tournament.\n",
+      "WARNING:root:I would like to compete in the NAGA tournament.\n",
+      "ERROR:root:Something bad happened\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-40-00f99f40c809>\", line 14, in <module>\n",
+      "    tournament = tournaments.pop()\n",
+      "IndexError: pop from empty list\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Do...Do This\n",
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(level=logging.DEBUG,\n",
+    "                    format='%(asctime)s %(levelname)s %(message)s',\n",
+    "                    filename='/tmp/myapp.log',\n",
+    "                    filemode='w')\n",
+    "logging.debug('A debug message')\n",
+    "logging.info('Some information')\n",
+    "logging.warning('A shot across the bows')\n",
+    "tournaments = [\"NAGA\", \"IBJJF\", \"EBI\"]\n",
+    "while True:\n",
+    "    try:\n",
+    "        tournament = tournaments.pop()\n",
+    "        logging.warning(f\"I would like to compete in the {tournament} tournament.\")\n",
+    "    except IndexError:\n",
+    "        logging.exception(\"Something bad happened\")\n",
+    "        #print(\"There are no more tournaments\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
