adding latest items from class

--- a/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 1:  Introductory Concepts Outline\n",
+    "#### Section 1:  Introductory Concepts Outline (This for a training class)\n",
     "*  Procedural Statements\n",
     "*  Strings and String Formatting\n",
     "*  Numbers and Arithmetic Operations\n",
@@ -200,7 +200,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
