--- a/notebooks/Functional_Introduction_To_Python_Section_3(Control_Structures).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_3(Control_Structures).ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
     "    elif position == \"full_mount\":\n",
     "        print(f\"Try an arm triangle\")\n",
     "    else:\n",
-    "        print(f\"Your on your own, there is no suggestion for an attack\")\n",
+    "        print(f\"You're on your own, there is no suggestion for an attack\")\n",
     "    \n"
    ]
   },
@@ -208,14 +208,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Generator Expression\n",
-    "Generator Expressions build further on the concept of yield by allowing for the lazy evaluation of a sequence.\n",
-    "The benefit of generator expressions is that nothing is evaulated or brought into memory until it is actually evaluated.  This is why the example below can operating on an infinite sequence of random attacks that are generated.\n",
+    "Generator Expressions build further on the concept of yield by allowing for the lazy evaluation of a sequence. The benefit of generator expressions is that nothing is evaluated or brought into memory until it is actually evaluated. \n",
     "\n",
-    "In the generator pipline the lower case attack, such as \"arm_triangle\" is converted to \"ARM_TRIANGLE\", next the underscore is remove \"ARM TRIANGLE\".  "
+    "This is why the example below can be operating on an infi-nite sequence of random attacks that are generated.\n",
+    "In the generator pipeline the lower-case attack, such as \"arm_triangle\" is converted to \"ARM_TRIANGLE\", next the underscore is remove \"ARM TRIANGLE\"."
    ]
   },
   {
@@ -417,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
