--- a/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
@@ -12,6 +12,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [1,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.popn "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
