--- a/notebooks/IO Python.ipynb
+++ b/notebooks/IO Python.ipynb
@@ -66,6 +66,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading a file in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bam']\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open(\"workfile.txt\", \"r\")\n",
+    "out = f.readlines()\n",
+    "f.close()\n",
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write two things with complex sentence\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number = 1.0\n",
+    "my_string = \"My favorite number\"\n",
+    "statement = f\"{my_string} {number}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite number 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(statement)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite number 1.0"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"workfile2.txt\", \"w\") as workfile:\n",
+    "    workfile.write(statement)\n",
+    "!cat workfile2.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How do I create a DataFrame in Pandas\n",
+    "* Load a csv file\n",
+    "* Load a list or dictionary to create a dataframe\n",
+    "* Create an empty dataframe and programtically insert values into it\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
