--- a/notebooks/IO Python.ipynb
+++ b/notebooks/IO Python.ipynb
@@ -157,6 +157,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Worth Reading more about pandas I/O\n",
+    "https://chrisalbon.com/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
