--- a/notebooks/IO Python.ipynb
+++ b/notebooks/IO Python.ipynb
@@ -161,7 +161,120 @@
    "metadata": {},
    "source": [
     "### Worth Reading more about pandas I/O\n",
-    "https://chrisalbon.com/"
+    "* https://chrisalbon.com/\n",
+    "* https://github.com/jakevdp/PythonDataScienceHandbook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using the subprocess command\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = subprocess.Popen(\"ls -l\", shell=True, stdout=subprocess.PIPE)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = res.stdout.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[b'total 328\\n', b'-rw-r--r--  1 noahgift  staff  20612 Nov 27 16:16 Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb\\n', b'-rw-r--r--  1 noahgift  staff  30980 Nov 27 11:16 Functional_Introduction_To_Python_Section_2(Functions).ipynb\\n', b'-rw-r--r--  1 noahgift  staff  11068 Nov 21 14:49 Functional_Introduction_To_Python_Section_3(Control_Structures).ipynb\\n', b'-rw-r--r--  1 noahgift  staff   9467 Nov 22 14:21 Functional_Introduction_To_Python_Section_4(Intermediate_Topics).ipynb\\n', b'-rw-r--r--  1 noahgift  staff   3601 Nov 29 09:01 IO Python.ipynb\\n', b'-rw-r--r--  1 noahgift  staff  64300 Nov 27 14:19 class1_scratchpad.ipynb\\n', b'-rw-r--r--  1 noahgift  staff   1059 Nov 28 08:40 class2_scratchpad.ipynb\\n', b'-rw-r--r--  1 noahgift  staff    664 Nov 29 08:24 class3_scratchpad.ipynb\\n', b'-rw-r--r--  1 noahgift  staff      3 Nov 29 08:29 workfile.txt\\n', b'-rw-r--r--  1 noahgift  staff     22 Nov 29 08:49 workfile2.txt\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from multiprocessing import Pool\n",
+    "\n",
+    "def f(x):\n",
+    "    return x*x\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    p = Pool(5)\n",
+    "    print(p.map(f, [1, 2, 3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42, None, 'hello']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from multiprocessing import Process, Queue\n",
+    "\n",
+    "def f(q):\n",
+    "    q.put([42, None, 'hello'])\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    q = Queue()\n",
+    "    p = Process(target=f, args=(q,))\n",
+    "    p.start()\n",
+    "    print(q.get())    # prints \"[42, None, 'hello']\"\n",
+    "    p.join()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pyomo Article\n",
+    "\n",
+    "https://www.ibm.com/developerworks/cloud/library/cl-optimizepythoncloud1/"
    ]
   },
   {
